[package]
name = "rust-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"           # Web server library (like Express.js)
tokio = { version = "1.0", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] } # JSON handling
serde_json = "1.0"     # JSON parsing
base64 = "0.22"        # Base64 decoding
tower = "0.4"          # HTTP middleware
tower-http = { version = "0.5", features = ["cors"] }  # CORS headers